--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -8,7 +8,7 @@
   </div> <!-- end thank-you-message -->
 
   <div class="show-back-links col-sm-12">
-    <h4> <%= link_to 'Back to all the cookies', products_path %> |
+    <h4> <%= link_to 'Go back to all the Cookies', products_path %>
   </div>
 
 </div> <!-- end thank-you-page -->
