--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -20,3 +20,11 @@
   padding: 1% 2%;
   margin: 1%;
 }
+.honeypot {
+  font-size: 3px;
+  line-height: .5;
+  color: #f5f5f5;
+  border-color: #f5f5f5;
+  border-width: 0;
+  border-style: none;
+}
