--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -3,16 +3,13 @@
     <h4> Have a comment about these cookies? </h4>
     <%= form_for([@product, @product.comments.build]) do |f| %>
       <div class="field form-group">
+        <%= f.text_field :honeypot, class: "honeypot" %>
         <%= f.label :body, "Comments:", class: "comment-labels" %>
         <%= f.text_area :body, class: "form-control" %>
       </div>
       <div>
         <div class="rating"></div>
       </div>
-      <!-- <div>
-        <%= f.label :rating %>
-        <%= f.text_field :rating, class: "rating" %>
-      </div> -->
       <div>
         <%= f.submit class: "btn btn-default comment-submit-button" %>
       </div>
