--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,7 +7,7 @@
   <div class="show-product col-md-12">
     <h2 class="product-name"><%= @product.name %></h2>
     <div class="col-md-offset-4 col-md-4">
-      <%= image_tag(@product.image_url, class: "img-responsive show-prod-img") %>
+      <%= image_tag(@product.image_url, class: "img-responsive show-prod-img img-zoom", data_zoom_image: "@product.image_url") %>
     </div>
 
     <div class="col-sm-12">
