--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -20,6 +20,12 @@
   padding: 1% 2%;
   margin: 1%;
 }
+.new-comment {
+  font-size: 1.25em;
+  color: darkgreen;
+  text-align: center;
+  padding: 5px;
+}
 .honeypot {
   font-size: 3px;
   line-height: .5;
