--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,7 +1,7 @@
 <% if signed_in? %>
   <div class="comment-new container-fluid col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
     <h4> Have a comment about these cookies? </h4>
-    <%= form_for([@product, @product.comments.build]) do |f| %>
+    <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
       <div class="field form-group">
         <%= f.text_field :honeypot, class: "honeypot" %>
         <%= f.label :body, "Comments:", class: "comment-labels" %>
