--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,15 +1,18 @@
-<!-- Display Product info -->
+  <!-- Display Product info -->
 <% logger.debug "Product Id: #{product.id}" %>
-<div class="col-md-3 products">
-  <h2 class="product-name"><%= link_to product.name, product %></h2>
-  <%= link_to image_tag(product.image_url, class: "img-responsive prod-img"), product %>
-  <p class="product-desc"><%= product.description %></p>
-  <p class="p-margin-center price">Price per dozen $ <%= product.price_in_cents %></p>
-  <p class="p-margin-center price-color-code">price color code: <%= product.colour %></p>
-  <div class="edit-prod-links">
-    <% if can? :update, @product %>
-      <%= link_to 'Edit', edit_product_path(product), :class => "btn btn-warning btn-sm" %>
-      <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-warning btn-sm" %>
-    <% end %>
-  </div> <!--end edit-prod-links -->
-</div> <!--end products -->
+
+<% cache product do %>
+  <div class="col-md-3 products">
+    <h2 class="product-name"><%= link_to product.name, product %></h2>
+    <%= link_to image_tag(product.image_url, class: "img-responsive prod-img"), product %>
+    <p class="product-desc"><%= product.description %></p>
+    <p class="p-margin-center price">Price per dozen $ <%= product.price_in_cents %></p>
+    <p class="p-margin-center price-color-code">price color code: <%= product.colour %></p>
+    <div class="edit-prod-links">
+      <% if can? :update, @product %>
+        <%= link_to 'Edit', edit_product_path(product), :class => "btn btn-warning btn-sm" %>
+        <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-warning btn-sm" %>
+      <% end %>
+    </div> <!--end edit-prod-links -->
+  </div> <!--end products -->
+<% end %>
