--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,9 @@
       <% end %>
     </div>
 
-    <%= render @products %>
+    <% cache(cache_key_for_products) do %>
+      <%= render @products %>
+    <% end %>
 
     <div class="new-prod-link col-md-12">
       <% if can? :create, @product %>
