--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,6 +34,9 @@
         <% end %>
       </div>
       <%= render partial: "new_comment" %>
+      <div class="col-sm-3 alert alert-info" style="display:none" role="alert">
+        A new comment was posted!
+      </div>
       <%= render partial: "comments" %>
       <div class="page-numbers col-sm-12">
         <%= will_paginate @comments %>
