--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag("yc-logo.png", class: "img-responsive col-md-4 col-md-offset-4") %>
   </div>
   <!-- Display Product info -->
-  <div class="show-product col-md-12">
+  <div class="show-product col-md-12" data-product-id="<%= @product.id %>">
     <h2 class="product-name"><%= @product.name %></h2>
     <div class="col-md-offset-4 col-md-4">
       <%= image_tag(@product.image_url, class: "img-responsive show-prod-img img-zoom", data_zoom_image: "@product.image_url") %>
