--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
     <% end %>
 
     <% if alert %>
-      <h3 class="alert alert-danger" role="alert"> <%= alert %> </h3>
+      <h3 class="alert alert-danger alert-dismissible" role="alert"> <%= alert %> </h3>
     <% end %>
 
     <%= yield %>
