--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,15 @@
   </div>
   <!-- Display Product info -->
   <div class="show-product col-md-12" data-product-id="<%= @product.id %>">
-    <h2 class="product-name"><%= @product.name %></h2>
+    <div class="show-name-edit col-md-12">
+      <h2 class="product-name col-md-4 col-md-offset-4"><%= @product.name %></h2>
+      <div class="edit-prod-links col-md-4">
+        <% if can? :update, @product %>
+          <%= link_to 'Edit', edit_product_path(@product), :class => "btn btn-warning btn-sm" %>
+          <%= link_to 'Delete', @product, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-warning btn-sm" %>
+        <% end %>
+      </div> <!--end edit-prod-links -->
+    </div> <!-- end name-edit -->
     <div class="col-md-offset-4 col-md-4">
       <%= image_tag(@product.image_url, class: "img-responsive show-prod-img img-zoom", data_zoom_image: "@product.image_url") %>
     </div>
@@ -24,15 +32,16 @@
         <% end %>
       </div> <!-- end pay-button -->
 
+      <div class="best-worst-comment col-sm-12">
+        <% if @comments.size >= 2 %>
+          <h4 class="show-product-comment col-md-4 col-md-offset-2"> Best Comment: <%= @product.highest_rating_comment.body %> </h4>
+          <h4 class="show-product-comment col-md-4"> Worst Comment: <%= @product.lowest_rating_comment.body %> </h4>
+        <% end %>
+      </div> <!-- end best-worst-comment -->
+
+      <h4> Average Rating: <div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></div></h4>
       <h4> Views: <span class="badge"> <%= @product.views %> </span> </h4>
 
-      <h4>Average Rating: <div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></div></h4>
-      <!-- <p class="p-margin-center show-price-color-code"> price color code: <%= @product.colour %> </p> -->
-      <div class="col-sm-12">
-        <% if @comments.size >= 2 %>
-          <h4 class="show-product-comment"> Best Comment: <%= @product.highest_rating_comment.body %> ~ Worst Comment: <%= @product.lowest_rating_comment.body %> </h4>
-        <% end %>
-      </div>
       <%= render partial: "new_comment" %>
       <div class="col-sm-3 alert alert-info" style="display:none" role="alert">
         A new comment was posted!
